--- a/src/sass/imageviewer.scss
+++ b/src/sass/imageviewer.scss
@@ -10,15 +10,6 @@
   &.hidden {
     display: none;
   }
-}
-
-#top {
-  position: absolute;
-  z-index: 2;
-  width: 100%;
-  padding: 1em;
-  box-sizing: border-box;
-  background: rgba(0, 0, 0, 0.5);
 
   .details {
     margin: 0;
@@ -30,8 +21,26 @@
     li {
       display: inline;
       margin: 0.5em;
+
+      a {
+        color: #ffffff;
+      }
     }
   }
+}
+
+#top,
+#bottom {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  padding: 0.5em;
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+#bottom {
+  bottom: 0;
 }
 
 #nav {
@@ -67,6 +76,7 @@
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: contain;
+    cursor: pointer;
 
     &.active {
       display: block;
