--- a/src/sass/imageviewer.scss
+++ b/src/sass/imageviewer.scss
@@ -13,19 +13,19 @@
 }
 
 #top {
-  position: absolute;
-  z-index: 2;
-  width: 100%;
-  padding: 1em;
-  box-sizing: border-box;
   background: rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  padding: 1em;
+  position: absolute;
+  width: 100%;
+  z-index: 2;
 
   .details {
+    line-height: 1.5;
+    list-style: none;
     margin: 0;
     padding: 0;
-    list-style: none;
     text-align: center;
-    line-height: 1.5;
 
     li {
       display: inline;
@@ -36,12 +36,16 @@
 
 #nav {
   .nav-item {
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    color: #fff;
-    padding: 0.5em;
     background: rgba(0, 0, 0, 0.5);
+    border: 0;
+    color: #fff;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: inherit;
+    padding: 0.5em;
+    position: absolute;
+    top: 50%;
+    z-index: 1;
 
     &.previous {
       left: 0;
@@ -55,18 +59,18 @@
 
 // Viewer
 #viewer {
-  width: 100%;
+  background: #eeeeee;
   height: 100%;
   overflow: scroll;
-  background: #eeeeee;
+  width: 100%;
 
   .image {
-    display: none;
-    width: 100%;
-    height: 100%;
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: contain;
+    display: none;
+    height: 100%;
+    width: 100%;
 
     &.active {
       display: block;
